Finished FluentAPI demo.

--- a/CodeFirstMigrationsDemo.Fluent/CodeFirstMigrationsDemo.Fluent.csproj
+++ b/CodeFirstMigrationsDemo.Fluent/CodeFirstMigrationsDemo.Fluent.csproj
@@ -51,11 +51,21 @@
     <Compile Include="CourseCatalog\Student.cs" />
     <Compile Include="CourseCatalog\StudentAddress.cs" />
     <Compile Include="CourseCatalog\Teacher.cs" />
+    <Compile Include="Migrations\201506040307410_InitialSetup.cs" />
+    <Compile Include="Migrations\201506040307410_InitialSetup.Designer.cs">
+      <DependentUpon>201506040307410_InitialSetup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201506040307410_InitialSetup.resx">
+      <DependentUpon>201506040307410_InitialSetup.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
